// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component generator module writes an app component 1`] = `
"import React from \\"react\\";
import { connect } from \\"react-redux\\";
import * as OneView from \\"../views/OneView\\"

function renderViews(){
        return(
            <OneView>
        )
    };

const Component = () => (
    <div id=\\"test-app\\">
        {renderViews()}
    </div>
);

module.exports = Component;"
`;

exports[`component generator module writes an app component 2`] = `
"import React from \\"react\\";
import { connect } from \\"react-redux\\";
import TextField from \\"@material-ui/core/TextField\\";

function render(){
        return(
<TextField id=\\"foo\\" value=\\"\\" />
        )
    };

const Component = () => (
    <div id=\\"one-view\\">
        {render()}
    </div>
);

module.exports = Component;"
`;
